# ChangeLog for dev-python/sip
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.160 2010/03/01 23:52:19 ssuominen Exp $

  02 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> sip-4.10.ebuild:
  amd64 stable wrt #301105

  01 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> sip-4.10.ebuild:
  x86 stable wrt bug #301105

  10 Feb 2010; Jeroen Roovers <jer@gentoo.org> sip-4.9.3-r1.ebuild:
  Stable for HPPA (bug #300713).

  08 Feb 2010; Christian Faulhammer <fauli@gentoo.org> sip-4.9.3-r1.ebuild:
  stable x86, bug 300713

  02 Feb 2010; Alex Alexander <wired@gentoo.org> sip-4.9.3-r1.ebuild:
  updated SRC_URI to use gentoo mirrors, upstream doesn't provide this
  version anymore

  31 Jan 2010; <hwoarang@gentoo.org> sip-4.9.3-r1.ebuild:
  Stable on amd64 wrt bug #300713

*sip-4.10 (15 Jan 2010)

  15 Jan 2010; Ben de Groot <yngwin@gentoo.org> +sip-4.10.ebuild:
  Version bump

  11 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  sip-4.8.2.ebuild, sip-4.8.2-r1.ebuild, sip-4.9.3-r1.ebuild:
  Don't call python_need_rebuild() (bug #300517).

*sip-4.9.3-r1 (20 Dec 2009)

  20 Dec 2009; Fabian Groffen <grobian@gentoo.org> +sip-4.9.3-r1.ebuild,
  +files/sip-4.9.3-darwin.patch:
  Merged keywords from Prefix overlay, applied fixes for Prefix and Darwin
  (bug #295035)

*sip-4.9.3 (23 Nov 2009)

  23 Nov 2009; Markos Chandras <hwoarang@gentoo.org> +sip-4.9.3.ebuild:
  Version bump. bug fix release

*sip-4.9.2 (20 Nov 2009)

  20 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +sip-4.9.2.ebuild:
  Version bump.

  10 Nov 2009; Ben de Groot <yngwin@gentoo.org> -sip-4.8.1.ebuild,
  sip-4.8.2.ebuild, sip-4.8.2-r1.ebuild, sip-4.9.1.ebuild:
  Drop old 4.8.1 version. Add gentoo mirror for 4.8.2 tarball which was
  removed upstream. Add warning to recompile reverse dependencies on
  upgrade. Fixes bugs 288016 and 291799.

*sip-4.9.1 (28 Oct 2009)
