@@ -1,11 +1,13 @@
 AUX sip-4.8.2-python-3.patch 346 RMD160 5951487d2adc720d50926a2298c6db100832d56e SHA1 baef1a400518c1f0126e8e3da7ded76fac65215e SHA256 9b7b933c64da0cfd5cb9505a56a3911018735a6b10121193d42c54a59cae11df
 AUX sip-4.9.3-darwin.patch 1447 RMD160 adc8a4c56dbed79dc172467de5df4205fa071bc6 SHA1 c1ad08eff9c537068bd5af4782a7e570cc6c2552 SHA256 91751308ce118af4f7f7cb3ac3e25de29c527ddc0bb52102e6e835c8c0e64ea2
+DIST sip-4.10.1.tar.gz 646547 RMD160 4c696d066dd0ac4c936a30ebdc3f88fbf6427a16 SHA1 35a1ec1f68e37b042454bff70471acc8d3c574d3 SHA256 303188c130644325496d562502a784a97a44610c5eec9d988584b2aa0c9aed9a
 DIST sip-4.10.tar.gz 702403 RMD160 ebb53aadd08cccbc3ad78175b604dc939eb164db SHA1 4dfe9e18dff6b6802c5e3f577346092619d5d59b SHA256 d08a764a69e41f37d81b456d628947d114da37a6cd8456e02e3f8ad481e5d696
 DIST sip-4.8.2.tar.gz 615394 RMD160 5b390d09a5b1a5e5fbf29d245aee8543397a1f19 SHA1 0364027c34eb69ce8c51d316c68f10a02a42d036 SHA256 2ebb29deb2bbcdb99f47866e59deea7c6d98be0c835547b043eefd151516d9a9
 DIST sip-4.9.3.tar.gz 661144 RMD160 fae89ea6ca770e96953dfab4bb1fe29cdc28eb9c SHA1 789be43920e8072a4d4d99fd40e4332fd63f54c4 SHA256 de93d68f367955725817dd68e9d028fe62ea5fb2ae6755acf0a592ebd223fd83
+EBUILD sip-4.10.1.ebuild 2003 RMD160 b19e148aed93f16e67c38724d6588b856ad202a8 SHA1 8a780da2ae480a8ad50f1dab4255014aa551508f SHA256 89a2ebf54f14efd461201162870aa3c4c92d5769cfd016a494f7cbe7470df19d
 EBUILD sip-4.10.ebuild 2012 RMD160 7ac4197e71af0d62f1da6bb4b05c23618cd4479a SHA1 5d095108e04d3204605345bb647190f63371969b SHA256 d2f7cd5cc1e949fbe39d085aac697393f95ef3a1ffaf1cdb069e9381ebc355fc
 EBUILD sip-4.8.2-r1.ebuild 1809 RMD160 37c67562e8b0e010689f741c900e5c191bb91df0 SHA1 d19f1dc290f6c280816f9c35fc7da643c50d96ca SHA256 3edac1677fba517d5a617018dfabd521fcb39073e8cb43d8cc4364157132db52
 EBUILD sip-4.8.2.ebuild 1502 RMD160 8b1c2272c071bae38b6b5b3da63914f2b869dea9 SHA1 2fbf0ab2bf844f047791c3b74a8e0a01366609eb SHA256 b7dc515002a1090e30b12de53f11e97435b3a8022ce7417af46e5f188afaafe7
 EBUILD sip-4.9.3-r1.ebuild 1957 RMD160 1c8bb88ad7735ff848f92a802ca75f48049d38f3 SHA1 0b654c9b0527fa036fe9852d5c2ec0f5c6e97ee5 SHA256 2a953744ab0043f8084d6a53920e4c12dd52afbcff7dddce9c8ece13f004b9dd
-MISC ChangeLog 19488 RMD160 d6925ff516b64c2f3a8bbc50f52f544669b0393d SHA1 8643b219902b307c64bc285b20e4208837b29bee SHA256 543657fd4ffc9f771b5be0c5428c13e6d2c64f3811ddd9385b2805ff5b7953bb
+MISC ChangeLog 19629 RMD160 9e6a75bc10c163f231fac04c5de0ee70f67ee0c5 SHA1 5165fec255c8550f0f68fe80a980b7b4067e3607 SHA256 29227c5f98c5fa08b7a420f75a701f4ac48092b02c2a975053876afd0cda7fc8
 MISC metadata.xml 175 RMD160 74ecde8b999da503a2733b49ed618d5d50d26476 SHA1 ec86e15b85c2bc4429ad67bb52238b44f2b16cbd SHA256 26b18db06b1665422af8905fb70f8f48920a048578172d62b9689e273ee39a2d
