@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/sip
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.160 2010/03/01 23:52:19 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.161 2010/03/17 23:43:01 yngwin Exp $
+
+*sip-4.10.1 (17 Mar 2010)
+
+  17 Mar 2010; Ben de Groot <yngwin@gentoo.org> +sip-4.10.1.ebuild:
+  Version bump. ChangeLog is no longer shipped.
 
   02 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> sip-4.10.ebuild:
   amd64 stable wrt #301105
